# pico-multicore-base

./: .gitignore  CMakeLists.txt  Makefile
src/: main.c
